# pracuj.pl_auto_job_applier

./: .env.example  .gitignore  GEMINI.md  README.md  pyproject.toml  run_code.py
src/: applier.py  browser_use_applier.py  cli.py  filter_url.py  index_scrapper.py  logger.py  login_selenium.py  webdriver_init.py
